cmake_minimum_required(VERSION 2.6)

project(Multiwinia)
include_directories(
${Multiwinia_SOURCE_DIR}/code
${Multiwinia_SOURCE_DIR}/contrib/eclipse
${Multiwinia_SOURCE_DIR}/contrib/systemiv
${Multiwinia_SOURCE_DIR}/contrib/binreloc
)

#should be set, this cmake file does not support mac/win32
if (UNIX)
	add_definitions(-DTARGET_OS_LINUX)
	add_definitions(-DHAVE_SOCKET -DHAVE_SELECT -DHAVE_GETHOSTBYNAME -DHAVE_INET_NTOA)
endif (UNIX)

#We only support amd64 and x86, so this hack works.
if (TARGET_AMD64)
	add_definitions(-DTARGET_ARCH_AMD64)
endif (TARGET_AMD64)

#Set if cross compiling
if (CROSS_X86)
	add_definitions(-m32)
	set(CMAKE_EXE_LINKER_FLAGS "-m32")
endif (CROSS_X86)


set(MULTIWINIA_INTERFACE_SRCS
code/interface/chatinput_window.h
code/interface/chatinput_window.cpp
code/interface/cheat_window.h
code/interface/cheat_window.cpp
code/interface/checkbox.h
code/interface/checkbox.cpp
code/interface/controllerunplugged_window.h
code/interface/controllerunplugged_window.cpp
code/interface/darwinia_window.h
code/interface/darwinia_window.cpp
code/interface/debugmenu.h
code/interface/debugmenu.cpp
code/interface/demoend_window.h
code/interface/demoend_window.cpp
code/interface/drop_down_menu.h
code/interface/drop_down_menu.cpp
code/interface/filedialog.h
code/interface/filedialog.cpp
code/interface/gesture_window.h
code/interface/gesture_window.cpp
code/interface/grabber_window.h
code/interface/grabber_window.cpp
code/interface/helpandoptions_windows.h
code/interface/helpandoptions_windows.cpp
code/interface/input_field.h
code/interface/input_field.cpp
code/interface/leaderboards_window.h
code/interface/leaderboards_window.cpp
code/interface/lights_window.h
code/interface/lights_window.cpp
code/interface/mainmenus.h
code/interface/mainmenus.cpp
code/interface/message_dialog.h
code/interface/message_dialog.cpp
code/interface/mods_window.h
code/interface/mods_window.cpp
code/interface/multiwinia_filedialog.h
code/interface/multiwinia_filedialog.cpp
code/interface/multiwinia_window.h
code/interface/multiwinia_window.cpp
code/interface/network_window.h
code/interface/network_window.cpp
code/interface/prefs_graphics_window.h
code/interface/prefs_graphics_window.cpp
code/interface/prefs_keybindings_window.h
code/interface/prefs_keybindings_window.cpp
code/interface/prefs_other_window.h
code/interface/prefs_other_window.cpp
code/interface/prefs_screen_window.h
code/interface/prefs_screen_window.cpp
code/interface/prefs_sound_window.h
code/interface/prefs_sound_window.cpp
code/interface/profilewindow.h
code/interface/profilewindow.cpp
code/interface/reallyquit_window.h
code/interface/reallyquit_window.cpp
code/rocket_status_panel.h
code/rocket_status_panel.cpp
code/interface/save_on_quit_window.h
code/interface/save_on_quit_window.cpp
code/interface/scrollbar.h
code/interface/scrollbar.cpp
code/interface/sound_profile_window.h
code/interface/sound_profile_window.cpp
code/interface/soundeditor_window.h
code/interface/soundeditor_window.cpp
code/interface/soundparameter_window.h
code/interface/soundparameter_window.cpp
code/interface/soundstats_window.h
code/interface/soundstats_window.cpp
code/interface/userprofile_window.h
code/interface/userprofile_window.cpp
#interface/editor
code/interface/buildings_window.h
code/interface/buildings_window.cpp
code/interface/camera_anim_window.h
code/interface/camera_anim_window.cpp
code/interface/camera_mount_window.h
code/interface/camera_mount_window.cpp
code/interface/editor_window.h
code/interface/editor_window.cpp
code/interface/globalworldeditor_window.h
code/interface/globalworldeditor_window.cpp
code/interface/instant_unit_window.h
code/interface/instant_unit_window.cpp
code/interface/invalidcrates_window.h
code/interface/invalidcrates_window.cpp
code/interface/landscape_window.h
code/interface/landscape_window.cpp
code/interface/multiwiniaoptions_window.h
code/interface/multiwiniaoptions_window.cpp
code/interface/tree_window.h
code/interface/tree_window.cpp
)

set(MULTIWINIA_LIB_SRCS
#lib
code/lib/auto_vector.h
code/lib/debug_render.cpp
contrib/systemiv/lib/debug_utils.h
contrib/systemiv/lib/debug_utils.cpp
code/lib/exception_handler.h
code/lib/exception_handler.cpp
#contrib/systemiv/lib/hi_res_time.h     #See the two linux below for the
#contrib/systemiv/lib/hi_res_time.cpp   # other avaliable implementation
code/lib/hi_res_time.h
code/lib/hi_res_time_sdl.cpp
code/lib/language_table.h
code/lib/language_table.cpp
#contrib/systemiv/lib/memory_leak.h #win32 only
#contrib/systemiv/lib/memory_leak.cpp
code/lib/MiniVersion.h
code/lib/MiniVersion.cpp
contrib/systemiv/lib/network_stream.h
contrib/systemiv/lib/network_stream.cpp
code/lib/poster_maker.h
code/lib/poster_maker.cpp
code/lib/preferences.h
code/lib/preferences.cpp
contrib/systemiv/lib/profiler.h
contrib/systemiv/lib/profiler.cpp
code/lib/resource.h
code/lib/resource.cpp
code/lib/runnable.h
code/lib/runnable.cpp
contrib/systemiv/lib/string_utils.h
contrib/systemiv/lib/string_utils.cpp
code/lib/system_info.h
code/lib/system_info_linux.cpp
code/lib/universal_include.h
code/lib/universal_include.cpp
code/lib/user_info.h
code/lib/user_info.cpp
code/lib/window_manager.h
code/lib/window_manager.cpp
code/lib/window_manager_sdl.h
code/lib/window_manager_sdl.cpp
code/lib/work_queue.h
code/lib/work_queue.cpp
#lib/render
code/lib/3d_sprite.h
code/lib/3d_sprite.cpp
code/lib/bitmap.h
code/lib/bitmap.cpp
code/lib/debug_render.h
code/lib/ogl_extensions.h
code/lib/persisting_debug_render.h
code/lib/persisting_debug_render.cpp
code/lib/render_utils.h
code/lib/render_utils.cpp
code/lib/rgb_colour.h
code/lib/rgb_colour.cpp
code/lib/safegl.h
code/lib/safegl.cpp
code/lib/shape.h
code/lib/shape.cpp
code/lib/sphere_renderer.h
code/lib/sphere_renderer.cpp
code/lib/text_renderer.h
code/lib/text_renderer.cpp
code/lib/texture_uv.h
code/lib/texture_uv.cpp
#lib/render/opengl
code/lib/ogl_extensions_sdl.cpp
#code/lib/window_manager.cpp
#lib/render/math
code/lib/invert_matrix.h
code/lib/invert_matrix.cpp
code/lib/math_utils.h
code/lib/math_utils.cpp
code/lib/matrix33.h
code/lib/matrix33.cpp
code/lib/matrix34.h
code/lib/matrix34.cpp
code/lib/plane.h
code/lib/plane.cpp
code/lib/vector2.h
code/lib/vector2.cpp
code/lib/vector3.h
code/lib/vector3.cpp
#lib/file
contrib/systemiv/lib/filesys/binary_stream_readers.h
contrib/systemiv/lib/filesys/binary_stream_readers.cpp
contrib/systemiv/lib/filesys/file_system.h
contrib/systemiv/lib/filesys/file_system.cpp
contrib/systemiv/lib/filesys/filesys_utils.h
contrib/systemiv/lib/filesys/filesys_utils.cpp
contrib/systemiv/lib/filesys/text_file_writer.h
contrib/systemiv/lib/filesys/text_file_writer.cpp
contrib/systemiv/lib/filesys/text_stream_readers.h
contrib/systemiv/lib/filesys/text_stream_readers.cpp
code/unicode/unicode_text_file_writer.h
code/unicode/unicode_text_file_writer.cpp
#lib/input
code/lib/input/control_bindings.h
code/lib/input/control_bindings.cpp
code/lib/input/control_types.h
code/lib/input/control_types.inc
code/lib/input/control_types.cpp
code/lib/input/eventhandler.h
code/lib/input/eventhandler.cpp
code/lib/input/file_paths.h
code/lib/input/file_paths.cpp
code/lib/input/input.h
code/lib/input/input.cpp
code/lib/input/input_types.h
code/lib/input/input_types.cpp
code/lib/input/inputdriver.h
code/lib/input/inputdriver.cpp
code/lib/input/inputdriver_alias.h
code/lib/input/inputdriver_alias.cpp
code/lib/input/inputdriver_chord.h
code/lib/input/inputdriver_chord.cpp
code/lib/input/inputdriver_conjoin.h
code/lib/input/inputdriver_conjoin.cpp
code/lib/input/inputdriver_idle.h
code/lib/input/inputdriver_idle.cpp
code/lib/input/inputdriver_invert.h
code/lib/input/inputdriver_invert.cpp
code/lib/input/inputdriver_pipe.h
code/lib/input/inputdriver_pipe.cpp
code/lib/input/inputdriver_prefs.h
code/lib/input/inputdriver_prefs.cpp
code/lib/input/inputdriver_simple.h
code/lib/input/inputdriver_simple.cpp
code/lib/input/inputdriver_value.h
code/lib/input/inputdriver_value.cpp
code/lib/input/inputdriver_values.inc
code/lib/input/inputdriver_sdl_key.h
code/lib/input/inputdriver_sdl_key.cpp
code/lib/input/inputdriver_sdl_mouse.h
code/lib/input/inputdriver_sdl_mouse.cpp
code/lib/input/inputfilter.h
code/lib/input/inputfilter.cpp
code/lib/input/inputfilter_direction.h
code/lib/input/inputfilter_direction.cpp
code/lib/input/inputfilter_withdelta.h
code/lib/input/inputfilter_withdelta.cpp
code/lib/input/inputfiltermanager.h
code/lib/input/inputfiltermanager.cpp
code/lib/input/inputfilterspec.h
code/lib/input/inputspec.h
code/lib/input/inputspec.cpp
code/lib/input/inputspeclist.h
code/lib/input/keydefs.h
code/lib/input/keynames.h
code/lib/input/keynames.cpp
code/lib/input/movement2d.h
code/lib/input/movement2d.cpp
code/lib/targetcursor.h
code/lib/targetcursor.cpp
code/lib/input/transform.h
code/lib/input/transform.cpp
code/lib/input/sdl_eventhandler.h
code/lib/input/sdl_eventhandler.cpp
code/lib/input/sdl_eventproc.h
#lib/netlib
contrib/systemiv/lib/netlib/bytestream.h
contrib/systemiv/lib/netlib/net_lib.h
contrib/systemiv/lib/netlib/net_lib.cpp
contrib/systemiv/lib/netlib/net_lib_linux.h
contrib/systemiv/lib/netlib/net_mutex.h
contrib/systemiv/lib/netlib/net_mutex_linux.cpp
contrib/systemiv/lib/netlib/net_socket.h
contrib/systemiv/lib/netlib/net_socket.cpp
contrib/systemiv/lib/netlib/net_socket_listener.h
contrib/systemiv/lib/netlib/net_socket_listener.cpp
contrib/systemiv/lib/netlib/net_socket_session.h
contrib/systemiv/lib/netlib/net_socket_session.cpp
contrib/systemiv/lib/netlib/net_thread.h
contrib/systemiv/lib/netlib/net_thread_linux.cpp
contrib/systemiv/lib/netlib/net_udp_packet.h
contrib/systemiv/lib/netlib/net_udp_packet.cpp
#lib/metaserver
contrib/systemiv/lib/metaserver/authentication.h
contrib/systemiv/lib/metaserver/authentication.cpp
contrib/systemiv/lib/metaserver/matchmaker.h
contrib/systemiv/lib/metaserver/matchmaker.cpp
contrib/systemiv/lib/metaserver/metaserver.h
contrib/systemiv/lib/metaserver/metaserver.cpp
#lib/math
contrib/systemiv/lib/math/filecrc.h
contrib/systemiv/lib/math/filecrc.cpp
contrib/systemiv/lib/math/hash.h
contrib/systemiv/lib/math/hash.cpp
contrib/systemiv/lib/math/math_stubs.h
contrib/systemiv/lib/math/math_stubs.cpp
contrib/systemiv/lib/math/random_number.h
contrib/systemiv/lib/math/random_number.cpp
#lib/container templates
code/lib/2d_array.h
code/lib/2d_surface_map.h
contrib/systemiv/lib/tosser/bounded_array.h
contrib/systemiv/lib/tosser/btree.h
contrib/systemiv/lib/tosser/darray.h
contrib/systemiv/lib/tosser/directory.h
contrib/systemiv/lib/tosser/directory.cpp
contrib/systemiv/lib/tosser/fast_darray.h
contrib/systemiv/lib/tosser/hash_table.h
contrib/systemiv/lib/tosser/llist.h
code/lib/presized_array.h
code/lib/slice_darray.h
contrib/systemiv/lib/tosser/sorting_hash_table.h
#lib/unicode
contrib/systemiv/lib/unicode/unicode_string.h
contrib/systemiv/lib/unicode/unicode_string.cpp
contrib/systemiv/lib/unicode/unicode_text_stream_reader.h
contrib/systemiv/lib/unicode/unicode_text_stream_reader.cpp
)

set(MULTIWINIA_WORLDOBJECT_SRCS
#worldobject
code/worldobject/dustball.h
code/worldobject/dustball.cpp
code/worldobject/flag.h
code/worldobject/flag.cpp
code/worldobject/lightning.h
code/worldobject/lightning.cpp
code/worldobject/randomiser.h
code/worldobject/randomiser.cpp
code/worldobject/snow.h
code/worldobject/snow.cpp
code/worldobject/spirit.h
code/worldobject/spirit.cpp
code/worldobject/weapons.h
code/worldobject/weapons.cpp
code/worldobject/worldobject.h
code/worldobject/worldobject.cpp
#worldobject/Buildings
code/worldobject/aiobjective.h
code/worldobject/aiobjective.cpp
code/worldobject/anthill.h
code/worldobject/anthill.cpp
code/worldobject/blueprintstore.h
code/worldobject/blueprintstore.cpp
code/worldobject/bridge.h
code/worldobject/bridge.cpp
code/worldobject/building.h
code/worldobject/building.cpp
code/worldobject/carryablebuilding.h
code/worldobject/carryablebuilding.cpp
code/worldobject/cave.h
code/worldobject/cave.cpp
code/worldobject/chess.h
code/worldobject/chess.cpp
code/worldobject/clonelab.h
code/worldobject/clonelab.cpp
code/worldobject/constructionyard.h
code/worldobject/constructionyard.cpp
code/worldobject/controlstation.h
code/worldobject/controlstation.cpp
code/worldobject/controltower.h
code/worldobject/controltower.cpp
code/worldobject/crate.h
code/worldobject/crate.cpp
code/worldobject/eruptionmarker.h
code/worldobject/eruptionmarker.cpp
code/worldobject/factory.h
code/worldobject/factory.cpp
code/worldobject/feedingtube.h
code/worldobject/feedingtube.cpp
code/worldobject/generator.h
code/worldobject/generator.cpp
code/worldobject/generichub.h
code/worldobject/generichub.cpp
code/worldobject/goddish.h
code/worldobject/goddish.cpp
code/worldobject/gunturret.h
code/worldobject/gunturret.cpp
code/worldobject/incubator.h
code/worldobject/incubator.cpp
code/worldobject/jumppad.h
code/worldobject/jumppad.cpp
code/worldobject/laserfence.h
code/worldobject/laserfence.cpp
code/worldobject/library.h
code/worldobject/library.cpp
code/worldobject/mine.h
code/worldobject/mine.cpp
code/worldobject/multiwiniazone.h
code/worldobject/multiwiniazone.cpp
code/worldobject/portal.h
code/worldobject/portal.cpp
code/worldobject/powerstation.h
code/worldobject/powerstation.cpp
code/worldobject/pulsebomb.h
code/worldobject/pulsebomb.cpp
code/worldobject/radardish.h
code/worldobject/radardish.cpp
code/worldobject/researchitem.h
code/worldobject/researchitem.cpp
code/worldobject/restrictionzone.h
code/worldobject/restrictionzone.cpp
code/worldobject/rocket.h
code/worldobject/rocket.cpp
code/worldobject/safearea.h
code/worldobject/safearea.cpp
code/worldobject/scripttrigger.h
code/worldobject/scripttrigger.cpp
code/worldobject/smokemarker.h
code/worldobject/smokemarker.cpp
code/worldobject/spam.h
code/worldobject/spam.cpp
code/worldobject/spawnpoint.h
code/worldobject/spawnpoint.cpp
code/worldobject/spiritreceiver.h
code/worldobject/spiritreceiver.cpp
code/worldobject/spiritstore.h
code/worldobject/spiritstore.cpp
code/worldobject/staticshape.h
code/worldobject/staticshape.cpp
code/worldobject/statue.h
code/worldobject/statue.cpp
code/worldobject/switch.h
code/worldobject/switch.cpp
code/worldobject/teleport.h
code/worldobject/teleport.cpp
code/worldobject/tree.h
code/worldobject/tree.cpp
code/worldobject/triffid.h
code/worldobject/triffid.cpp
code/worldobject/trunkport.h
code/worldobject/trunkport.cpp
code/worldobject/upgrade_port.h
code/worldobject/upgrade_port.cpp
code/worldobject/wall.h
code/worldobject/wall.cpp
code/worldobject/wallbuster.h
code/worldobject/wallbuster.cpp
#worldobject/Entities
code/worldobject/ai.h
code/worldobject/ai.cpp
code/worldobject/airstrike.h
code/worldobject/airstrike.cpp
code/worldobject/armour.h
code/worldobject/armour.cpp
code/worldobject/armyant.h
code/worldobject/armyant.cpp
code/worldobject/centipede.h
code/worldobject/centipede.cpp
code/worldobject/darwinian.h
code/worldobject/darwinian.cpp
code/worldobject/dropship.h
code/worldobject/dropship.cpp
code/worldobject/egg.h
code/worldobject/egg.cpp
code/worldobject/engineer.h
code/worldobject/engineer.cpp
code/worldobject/entity.h
code/worldobject/entity.cpp
code/worldobject/entity_leg.h
code/worldobject/entity_leg.cpp
code/worldobject/harvester.h
code/worldobject/harvester.cpp
code/worldobject/insertion_squad.h
code/worldobject/insertion_squad.cpp
code/worldobject/lander.h
code/worldobject/lander.cpp
code/worldobject/lasertrooper.h
code/worldobject/lasertrooper.cpp
code/worldobject/meteor.h
code/worldobject/meteor.cpp
code/worldobject/nuke.h
code/worldobject/nuke.cpp
code/worldobject/officer.h
code/worldobject/officer.cpp
code/worldobject/shaman.h
code/worldobject/shaman.cpp
code/worldobject/souldestroyer.h
code/worldobject/souldestroyer.cpp
code/worldobject/spaceship.h
code/worldobject/spaceship.cpp
code/worldobject/spider.h
code/worldobject/spider.cpp
code/worldobject/sporegenerator.h
code/worldobject/sporegenerator.cpp
code/worldobject/tank.h
code/worldobject/tank.cpp
code/worldobject/tentacle.h
code/worldobject/tentacle.cpp
code/worldobject/tripod.h
code/worldobject/tripod.cpp
code/worldobject/virii.h
code/worldobject/virii.cpp
)

SET(MULTIWINIA_SOUND_SRCS
#sound
code/sound/sample_cache.h
code/sound/sample_cache.cpp
code/sound/sound_filter.h
code/sound/sound_filter.cpp
code/sound/sound_instance.h
code/sound/sound_instance.cpp
code/sound/sound_library_2d.h
code/sound/sound_library_2d.cpp
code/sound/sound_library_2d_sdl.h
code/sound/sound_library_2d_sdl.cpp
code/sound/sound_library_3d.h
code/sound/sound_library_3d.cpp
##### OPENAL BEGIN
code/sound/sound_library_3d_openal.h
code/sound/sound_library_3d_openal.cpp
##### OPENAL END
code/sound/sound_library_3d_software.h
code/sound/sound_library_3d_software.cpp
code/sound/sound_parameter.h
code/sound/sound_parameter.cpp
code/sound/sound_stream_decoder.h
code/sound/sound_stream_decoder.cpp
code/sound/soundsystem.h
code/sound/soundsystem.cpp
)

set(MULTIWINIA_LOADERS_SRCS
#loaders
code/loaders/amiga_loader.h
code/loaders/amiga_loader.cpp
code/loaders/credits_loader.h
code/loaders/credits_loader.cpp
code/loaders/egames_loader.h
code/loaders/egames_loader.cpp
code/loaders/fodder_loader.h
code/loaders/fodder_loader.cpp
code/loaders/gameoflife_loader.h
code/loaders/gameoflife_loader.cpp
code/loaders/loader.h
code/loaders/loader.cpp
code/loaders/matrix_loader.h
code/loaders/matrix_loader.cpp
code/loaders/oberon_loader.h
code/loaders/oberon_loader.cpp
code/loaders/raytrace_loader.h
code/loaders/raytrace_loader.cpp
code/loaders/soul_loader.h
code/loaders/soul_loader.cpp
code/loaders/speccy_loader.h
code/loaders/speccy_loader.cpp
)

set(MULTIWINIA_NETWORK_SRCS
#network
code/network/bandwidth.h
code/network/bandwidth.cpp
code/network/bytestream.h
code/network/clienttoserver.h
code/network/clienttoserver.cpp
code/network/demo_limitations.h
code/network/demo_limitations.cpp
code/network/ftp_manager.h
code/network/ftp_manager.cpp
code/network/generic.h
code/network/generic.cpp
code/network/iframe.h
code/network/iframe.cpp
code/network/listener.h
code/network/listener.cpp
code/network/network_defines.h
code/network/network_quality.h
code/network/network_quality.cpp
code/network/networkvalue.h
code/network/networkvalue.cpp
code/network/server.h
code/network/server.cpp
code/network/servertoclient.h
code/network/servertoclient.cpp
code/network/servertoclientletter.h
code/network/syncdiff.h
code/network/syncdiff.cpp
)

set(MULTIWINIA_GAMEMENU_SRCS
#GameMenu
code/UI/AchievementButton.h
code/UI/AdvancedOptionsModeButton.h
code/UI/AnyLevelSelectButton.h
code/UI/ApplyNameButton.h
code/UI/AuthPageButton.h
code/UI/AuthStatusButton.h
code/UI/BuyNowInfoButton.h
code/UI/BuyNowModeButton.h
code/UI/CampaignButton.h
code/UI/ConnectButton.h
code/UI/credits_button.h
code/UI/CSpectatorButton.h
code/UI/DarwiniaModeButton.h
code/UI/DarwiniaPlusMPButton.h
code/UI/DarwiniaPlusSPButton.h
code/UI/EnterAuthKeyButton.h
code/UI/ErrorDialog.h
code/UI/ErrorDialog.cpp
code/UI/FancyColourButton.h
code/UI/FiltersPageButton.h
code/UI/FinishMultiwiniaButton.h
code/UI/GameMenuOptionsButton.h
code/UI/GameMenuWindow.h
code/UI/GameMenuWindow.cpp
code/UI/GamerTagButton.h
code/UI/GameServerButton.h
code/UI/GameTypeButton.h
code/UI/GameTypeAnyButton.h
code/UI/GameTypeImageButton.h
code/UI/GameTypeInfoButton.h
code/UI/HelpImageButton.h
code/UI/HelpModeButton.h
code/UI/HelpSelectButton.h
code/UI/ImageButton.h
code/UI/ImageButton.cpp
code/UI/JoinGameButton.h
code/UI/KickPlayerButton.h
code/UI/LevelSelectButton.h
code/UI/LevelSelectButtonBase.h
code/UI/MapData.h
code/UI/MapData.cpp
code/UI/MapDetailsButton.h
code/UI/MapImageButton.h
code/UI/MapInfoButton.h
code/UI/MapListTitlesButton.h
code/UI/MapSelectModeButton.h
code/UI/motdButton.h
code/UI/MultiwiniaEditorButton.h
code/UI/MultiwiniaModeButton.h
code/UI/MultiwiniaVersusCpuButton.h
code/UI/NewOrJoinButton.h
code/UI/NewServerButton.h
code/UI/NextHelpButton.h
code/UI/OptionDetailsButton.h
code/UI/PasteKeyButton.h
code/UI/PlayDemoAuthkeyButton.h
code/UI/PlayGameButton.h
code/UI/PrevHelpButton.h
code/UI/PrologueButton.h
code/UI/QuickMatchButton.h
code/UI/QuickStartButton.h
code/UI/QuitAuthKeyButton.h
code/UI/QuitButton.h
code/UI/RequestAIButton.h
code/UI/ResearchModeButton.h
code/UI/RollingDemoButton.h
code/UI/ScrollingTextButton.h
code/UI/ServerTitleInfoButton.h
code/UI/SoundSliderButton.h
code/UI/TestBedButtons.h
code/UI/TutorialButton.h
code/UI/UnlockFullGameButton.h
code/UI/update_page_buttons.h
code/UI/WaitingButton.h
)

set(MULTIWINIA_COMMON_SRCS
#code
code/3d_sierpinski_gasket.h
code/3d_sierpinski_gasket.cpp
code/achievement_tracker.h
code/achievement_tracker.cpp
code/animatedpanel.h
code/animatedpanel.cpp
code/animatedpanel_renderer.h
code/animatedpanel_renderer.cpp
code/app.h
code/app.cpp
code/attract.h
code/attract.cpp
code/UI/AuthInputField.h #Should this be in GameMenu?
code/benchmark.h
code/benchmark.cpp
code/camera.h
code/camera.cpp
code/clouds.h
code/clouds.cpp
code/control_help.h
code/control_help.cpp
code/deform.h
code/deform.cpp
code/demoendsequence.h
code/demoendsequence.cpp
code/effect_processor.h
code/effect_processor.cpp
code/entity_grid.h
code/entity_grid.cpp
code/entity_grid_cache.h
code/entity_grid_cache.cpp
code/explosion.h
code/explosion.cpp
code/game_menu.h
code/game_menu.cpp
code/gamecursor.h
code/gamecursor.cpp
code/gametimer.h
code/gametimer.cpp
code/gesture.h
code/gesture.cpp
code/gesture_demo.h
code/gesture_demo.cpp
code/gesture_demo_sdl.cpp
code/global_internet.h
code/global_internet.cpp
code/global_world.h
code/global_world.cpp
code/globals.h
code/helpsystem.h
code/helpsystem.cpp
code/keygen.h
code/keygen.cpp
code/landscape.h
code/landscape.cpp
code/landscape_renderer.h
code/landscape_renderer.cpp
code/level_file.h
code/level_file.cpp
code/loading_screen.h
code/loading_screen.cpp
code/location.h
code/location.cpp
code/location_editor.h
code/location_editor.cpp
code/location_input.h
code/location_input.cpp
code/main.h
code/main.cpp
code/mapcrc.h
code/mapfile.h
code/mapfile.cpp
code/markersystem.h
code/markersystem.cpp
code/multiwinia.h
code/multiwinia.cpp
code/multiwiniahelp.h
code/multiwiniahelp.cpp
code/obstruction_grid.h
code/obstruction_grid.cpp
code/particle_system.h
code/particle_system.cpp
code/renderer.h
code/renderer.cpp
code/routing_system.h
code/routing_system.cpp
code/script.h
code/script.cpp
code/sepulveda.h
code/sepulveda.cpp
code/sepulveda_strings.cpp
code/shaman_interface.h
code/shaman_interface.cpp
code/startsequence.h
code/startsequence.cpp
code/taskmanager.h
code/taskmanager.cpp
code/taskmanager_interface.h
code/taskmanager_interface.cpp
code/taskmanager_interface_gestures.h
code/taskmanager_interface_gestures.cpp
code/taskmanager_interface_icons.h
code/taskmanager_interface_icons.cpp
code/taskmanager_interface_multiwinia.h
code/taskmanager_interface_multiwinia.cpp
code/team.h
code/team.cpp
code/testharness.h
code/testharness.cpp
code/tutorial.h
code/tutorial.cpp
code/tutorial_demo1.cpp
code/tutorial_demo2.cpp
code/unit.h
code/unit.cpp
code/user_input.h
code/user_input.cpp
code/water.h
code/water.cpp
code/water_reflection.h
code/water_reflection.cpp
)

set(MULTIWINIA_CONTRIB_SRCS
#contrib/binreloc
contrib/systemiv/contrib/binreloc/prefix.cpp
)


add_executable(Multiwinia
${MULTIWINIA_INTERFACE_SRCS}
${MULTIWINIA_LIB_SRCS}
${MULTIWINIA_WORLDOBJECT_SRCS}
${MULTIWINIA_SOUND_SRCS}
${MULTIWINIA_LOADERS_SRCS}
${MULTIWINIA_NETWORK_SRCS}
${MULTIWINIA_GAMEMENU_SRCS}
${MULTIWINIA_COMMON_SRCS}
${MULTIWINIA_CONTRIB_SRCS}
)

target_link_libraries(Multiwinia
Eclipse
SDL
GL
GLU
png
openal
vorbisfile
vorbis
ogg
unrar
)



add_subdirectory(contrib/eclipse)
add_subdirectory(contrib/systemiv/contrib/unrar)
