cmake_minimum_required(VERSION 2.6)

project(unrar)
include_directories(
${unrar_SOURCE_DIR}
${unrar_SOURCE_DIR}/../../contrib/systemiv
${unrar_SOURCE_DIR}/../../code
)

add_definitions(-DTARGET_OS_LINUX)

add_library(unrar
archive.h
archive.cpp
arcread.cpp
array.h
cmddata.h
cmddata.cpp
coder.h
compress.h
consio.h
consio.cpp
crc.h
crc.cpp
crypt.h
crypt.cpp
encname.h
encname.cpp
errhnd.h
errhnd.cpp
extinfo.h
extinfo.cpp
extract.h
extract.cpp
filcreat.h
filcreat.cpp
file.h
file.cpp
filefn.h
filefn.cpp
filestr.h
filestr.cpp
find.h
find.cpp
getbits.h
getbits.cpp
global.h
global.cpp
headers.h
int64.h
int64.cpp
isnt.h
isnt.cpp
list.h
list.cpp
loclang.h
log.h
match.h
match.cpp
memfree.h
options.h
options.cpp
os.h
pathfn.h
pathfn.cpp
rarbloat.h
#rarbloat.cpp
rardefs.h
rarfn.h
rarlang.h
raros.h
rarresource.h
rarresource.cpp
rartypes.h
rarvm.h
rarvm.cpp
rarvmtbl.cpp
rawread.h
rawread.cpp
rdwrfn.h
rdwrfn.cpp
recvol.h
recvol.cpp
rijndael.h
rijndael.cpp
rs.h
rs.cpp
savepos.h
savepos.cpp
scantree.h
scantree.cpp
sha1.h
sha1.cpp
smallfn.h
smallfn.cpp
strfn.h
strfn.cpp
strlist.h
strlist.cpp
suballoc.h
system.h
system.cpp
timefn.h
timefn.cpp
ulinks.h
ulinks.cpp
unicode.h
unicode.cpp
unpack.h
unpack.cpp
unrar.h
unrar.cpp
version.h
volume.h
volume.cpp
)

